# json2pdf

./: README.md  build.gradle
client/: Cargo.toml  README.md
client/src/: lib.rs
client/src/protocol/: border.rs  document_settings.rs  mod.rs
client/src/protocol/elements/: image.rs  mod.rs  paragraph.rs  table.rs
server/: README.md  build.gradle
server/src/main/java/dev/array21/pdfgen/: PDFGenApplication.java
server/src/main/java/dev/array21/pdfgen/controller/: GenerateController.java
server/src/main/java/dev/array21/pdfgen/document/: DocumentImpl.java  DocumentSettings.java  DocumentSpecification.java
server/src/main/java/dev/array21/pdfgen/util/: ElementUtil.java
src/main/java/dev/array21/pdfgen/: Main.java  RuntimeTypeAdapterFactory.java
src/main/java/dev/array21/pdfgen/controller/: GenerateController.java
src/main/java/dev/array21/pdfgen/document/: DocumentGenerator.java  DocumentImpl.java  DocumentSpecification.java
src/main/java/dev/array21/pdfgen/element/: Convertable.java  Element.java  ImageElement.java  ParagraphElement.java  PdfElement.java  TableElement.java
src/main/java/dev/array21/pdfgen/element/border/: BorderSettings.java  (+1 more)
src/main/java/dev/array21/pdfgen/endpoints/: Generate.java
src/main/java/dev/array21/pdfgen/generator/: Generator.java
src/main/java/dev/array21/pdfgen/protocol/: BorderSettings.java  BorderSpecification.java  DocumentSettings.java  DocumentSpecification.java  Element.java  GenerateRequest.java  IElement.java
src/main/java/dev/array21/pdfgen/util/: ColorUtil.java  ElementUtil.java  PdfElement.java
(+35 files in other folders)
