[package]
name = "json2pdf-client"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
description = "Client library for the json2pdf server"
readme = "README.md"
repository = "https://github.com/TobiasDeBruijn/json2pdf"
license = "MIT OR Apache-2.0"
keywords = ["PDF", "json2pdf", "client"]
categories = ["api-bindings", "multimedia"]

[features]
blocking = ["reqwest/blocking"]

[dependencies]
base64 = "0.13.0"

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]